--- a/src/bunit.template/template/_Imports.razor
+++ b/src/bunit.template/template/_Imports.razor
@@ -1,6 +1,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using Microsoft.Extensions.DependencyInjection
+@using System.Threading.Tasks
 @using Bunit
 @using Bunit.TestDoubles
 @*#if (testFramework_xunit)*@
