fix: Fixed sample in docs and added more details

--- a/docs/samples/tests/razor/TwoWayBindingTest.razor
+++ b/docs/samples/tests/razor/TwoWayBindingTest.razor
@@ -1,10 +1,11 @@
-﻿@code {
+﻿@inherits TestContext
+
+@code {
   [Fact]
   public void Test()
   {
-    using var ctx = new TestContext();
     var currentValue = string.Empty;
 
-    var cut = ctx.Render(@<TwoWayBinding @bind-Value="currentValue"></TwoWayBinding>);
+    var cut = Render(@<TwoWayBinding @bind-Value="currentValue"></TwoWayBinding>);
   }
 }
