--- a/tests/bunit.testassets/BlazorE2E/RedTextComponent.razor
+++ b/tests/bunit.testassets/BlazorE2E/RedTextComponent.razor
@@ -1,1 +1,1 @@
-﻿<h1 style="color: red;" customattribute="somevalue">Hello, world!</h1>
+<h1 style="color: red;" customattribute="somevalue">Hello, world!</h1>
