--- a/tests/bunit.web.tests/_Imports.razor
+++ b/tests/bunit.web.tests/_Imports.razor
@@ -1,3 +1,4 @@
 @using Microsoft.Extensions.Logging;
 @using Xunit.Abstractions;
 @using Bunit.TestAssets.SampleComponents;
+@using Bunit.TestUtililities
