--- a/tests/bunit.testassets/BlazorE2E/AsyncEventHandlerComponent.razor
+++ b/tests/bunit.testassets/BlazorE2E/AsyncEventHandlerComponent.razor
@@ -8,17 +8,16 @@
 
 @code
 {
-    #nullable disable
-    TaskCompletionSource<object> _tcs;
+    TaskCompletionSource _tcs;
     string state = "Stopped";
     Task Tick(MouseEventArgs e)
     {
         if (_tcs == null)
         {
-            _tcs = new TaskCompletionSource<object>();
+            _tcs = new TaskCompletionSource();
 
             state = "Started";
-            return _tcs.Task.ContinueWith((_) =>
+            return _tcs.Task.ContinueWith((task) =>
             {
                 state = "Stopped";
                 _tcs = null;
@@ -30,6 +29,6 @@
 
     void Tock(MouseEventArgs e)
     {
-        _tcs.TrySetResult(null);
+        _tcs.TrySetResult();
     }
 }
