--- a/tests/bunit.testassets/BlazorE2E/KeyPressEventComponent.razor
+++ b/tests/bunit.testassets/BlazorE2E/KeyPressEventComponent.razor
@@ -1,6 +1,7 @@
 @using System.Text.Json
 
-Type here: <input @onkeypress=OnKeyPressed />
+Type here:
+<input @onkeypress=OnKeyPressed />
 <ul>
     @foreach (var key in keysPressed)
     {
@@ -15,5 +16,10 @@ Type here: <input @onkeypress=OnKeyPressed />
     {
         Console.WriteLine(JsonSerializer.Serialize(eventArgs));
         keysPressed.Add(eventArgs.Key);
+
+        if (eventArgs.Type != "keypress")
+        {
+            throw new ArgumentException($"Expected 'keypress' event type, got {eventArgs.Type}");
+        }
     }
 }
