--- a/tests/bunit.testassets/BlazorE2E/PassThroughContentComponent.razor
+++ b/tests/bunit.testassets/BlazorE2E/PassThroughContentComponent.razor
@@ -1,7 +1,7 @@
-﻿@ChildContent
+@ChildContent
 @code {
     // Note: The lack of any whitespace or other output besides @ChildContent is important for
     // what scenarios this component is used for in E2E tests.
-    #nullable disable
+
     [Parameter] public RenderFragment ChildContent { get; set; }
 }
