remove redundant params

--- a/tests/bunit.testassets/SampleComponents/TwoRendersTwoChanges.razor
+++ b/tests/bunit.testassets/SampleComponents/TwoRendersTwoChanges.razor
@@ -20,7 +20,7 @@
 
 			state = "Started";
 			tockEnabled = true;
-			return _tcs.Task.ContinueWith((_) =>
+			return _tcs.Task.ContinueWith(_ =>
 			{
 				state = "Stopped";
 				_tcs = null;
