--- a/tests/bunit.testassets/BlazorE2E/RazorTemplates.razor
+++ b/tests/bunit.testassets/BlazorE2E/RazorTemplates.razor
@@ -4,7 +4,7 @@
 
 <div id="codeblocktemplate">
     @{
-        RenderFragment<OrderedList<string>.Context> template = (context) => @<li>#@context.Index - @context.Item.ToLower()</li>;
+        RenderFragment<OrderedList<string>.Context> template = context => @<li>#@context.Index - @context.Item.ToLower()</li>;
     }
     <OrderedList Items="@items" Template="@template" />
 </div>
