--- a/tests/bunit.testassets/BlazorE2E/DuplicateAttributesComponent.razor
+++ b/tests/bunit.testassets/BlazorE2E/DuplicateAttributesComponent.razor
@@ -13,7 +13,7 @@
 </div>
 
 @functions {
-    Dictionary<string, object> elementValues = new Dictionary<string, object>()
+    Dictionary<string, object> elementValues = new Dictionary<string, object>
     {
         { "bool",  true },
         { "string", "middle-value" },
