--- a/tests/bunit.testassets/BlazorE2E/MultipleChildContent.razor
+++ b/tests/bunit.testassets/BlazorE2E/MultipleChildContent.razor
@@ -17,9 +17,9 @@ Toggle: <input type="checkbox" @bind="ShowFooter" id="toggle"/>
     #nullable disable
     List<Item> Items { get; } = new List<Item>()
     {
-        new Item(){ Col1 = "a0", Col2 = "b0", Col3 = "c0", },
-        new Item(){ Col1 = "a1", Col2 = "b1", Col3 = "c1", },
-        new Item(){ Col1 = "a2", Col2 = "b2", Col3 = "c2", },
+        new Item{ Col1 = "a0", Col2 = "b0", Col3 = "c0", },
+        new Item{ Col1 = "a1", Col2 = "b1", Col3 = "c1", },
+        new Item{ Col1 = "a2", Col2 = "b2", Col3 = "c2", },
     };
 
     bool ShowFooter;
