--- a/tests/bunit.testassets/BlazorE2E/OrderedList.razor
+++ b/tests/bunit.testassets/BlazorE2E/OrderedList.razor
@@ -6,7 +6,7 @@
     }
     @foreach (var item in Items)
     {
-        @Template(new Context() { Index = index++, Item = item, });
+        @Template(new Context { Index = index++, Item = item, });
     }
 </ol>
 
