--- a/tests/bunit.testassets/BlazorE2E/RenderFragmentToggler.razor
+++ b/tests/bunit.testassets/BlazorE2E/RenderFragmentToggler.razor
@@ -15,6 +15,13 @@
 
     static RenderFragment ExampleFragment = builder =>
     {
+        // TODO: Improve syntax
+        // Ideally we'd support inline Razor syntax here and are investigating this
+        // Could be:
+        //    static RenderFragment ExampleFragment()
+        //        => @<p>Some text<div>Child text</div></p>; // spaced over multiple lines, of course
+        // Failing that, we could have an C#-based representation, e.g.,
+        //    new Element.P { "Some text", new Element.Div { "Child text" } }, etc.
         builder.OpenElement(100, "p");
         builder.AddAttribute(101, "name", "fragment-element");
         builder.AddAttribute(102, "style", "color: red");
