--- a/tests/bunit.testassets/BlazorE2E/DuplicateAttributesComponent.razor
+++ b/tests/bunit.testassets/BlazorE2E/DuplicateAttributesComponent.razor
@@ -1,15 +1,13 @@
 <div id="duplicate-on-element">
-    <DuplicateAttributesOnElementChildComponent
-        BoolAttributeBefore="true"
-        StringAttributeBefore="original-text"
-        UnmatchedValues="elementValues"/>
+    <DuplicateAttributesOnElementChildComponent BoolAttributeBefore="true"
+                                                StringAttributeBefore="original-text"
+                                                UnmatchedValues="elementValues" />
 </div>
 
 <div id="duplicate-on-element-override">
-    <DuplicateAttributesOnElementChildComponent
-        UnmatchedValues="elementValues"
-        BoolAttributeAfter="false"
-        StringAttributeAfter="other-text" />
+    <DuplicateAttributesOnElementChildComponent UnmatchedValues="elementValues"
+                                                BoolAttributeAfter="false"
+                                                StringAttributeAfter="other-text" />
 </div>
 
 @functions {
