--- a/tests/bunit.testassets/SampleComponents/SignOutSessionManagerLoginDisplay.razor
+++ b/tests/bunit.testassets/SampleComponents/SignOutSessionManagerLoginDisplay.razor
@@ -1,6 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-@inject SignOutSessionStateManager signOutManager
 
 <AuthorizeView>
 	<Authorized>
@@ -14,8 +13,12 @@
 </AuthorizeView>
 
 @code {
+#pragma warning disable CS0618
+	[Inject] SignOutSessionStateManager SignOutManager { get;set;} = default!;
+#pragma warning restore CS0618
+
 	private async Task BeginSignOut(MouseEventArgs args)
 	{
-		await signOutManager.SetSignOutState();
+		await SignOutManager.SetSignOutState();
 	}
 }
