fix: Provide RunContinuationsAsynchronously flag to TaskCompletionSource

--- a/tests/bunit.testassets/BlazorE2E/AsyncEventHandlerComponent.razor
+++ b/tests/bunit.testassets/BlazorE2E/AsyncEventHandlerComponent.razor
@@ -15,7 +15,7 @@
     {
         if (_tcs == null)
         {
-            _tcs = new TaskCompletionSource<object>();
+            _tcs = new TaskCompletionSource<object>(TaskCreationOptions.RunContinuationsAsynchronously);
 
             state = "Started";
             return _tcs.Task.ContinueWith((_) =>
