--- a/tests/bunit.core.tests/ComponentParameterCollectionBuilderTests.razor
+++ b/tests/bunit.core.tests/ComponentParameterCollectionBuilderTests.razor
@@ -1,6 +1,6 @@
 @inherits TestContext
 @code {
-    [Fact(DisplayName = "Bind method should behave like bind-directive")]
+    [UIFact(DisplayName = "Bind method should behave like bind-directive")]
     public async Task Test400()
     {
         // arrange
