fix: Escape certain characters for attribute values

--- a/tests/bunit.testassets/BlazorE2E/ComponentWithEscapableCharacters.razor
+++ b/tests/bunit.testassets/BlazorE2E/ComponentWithEscapableCharacters.razor
@@ -1,5 +1,8 @@
 <p style="@Escaped">@Escaped</p>
 
 @code {
-	private string Escaped => "url('')";
+
+	[Parameter]
+	public string Escaped { get; set; }
+
 }
