fix: Added tests for escpable characters

--- a/tests/bunit.testassets/BlazorE2E/ComponentWithEscapableCharacters.razor
+++ b/tests/bunit.testassets/BlazorE2E/ComponentWithEscapableCharacters.razor
@@ -1,8 +1,6 @@
-<p style="@Escaped">@Escaped</p>
+<p some-attribute="@Escaped">@Escaped</p>
 
 @code {
-
 	[Parameter]
 	public string Escaped { get; set; }
-
 }
