refactor: Use TestContext as base class

--- a/docs/samples/tests/razor/CascadingParams1Test.razor
+++ b/docs/samples/tests/razor/CascadingParams1Test.razor
@@ -1,14 +1,14 @@
+@inherits TestContext
+
 @code
 {
   [Fact]
   public void Test()
   {
-    using var ctx = new TestContext();
-
     var isDarkTheme = true;
 
-    var cut = ctx.Render(@<CascadingValue Value="isDarkTheme">
-                            <CascadingParams />
-                          </CascadingValue>);
+    var cut = Render(@<CascadingValue Value="isDarkTheme">
+                        <CascadingParams />
+                      </CascadingValue>);
   }
 }
