--- a/docs/samples/tests/razor/NonBlazorTypesParamsTest.razor
+++ b/docs/samples/tests/razor/NonBlazorTypesParamsTest.razor
@@ -1,14 +1,14 @@
+@inherits TestContext
+
 @code
 {
   [Fact]
   public void Test()
   {
-    using var ctx = new TestContext();
-
     var lines = new List<string> { "Hello", "World" };
 
-    var cut = ctx.Render(@<NonBlazorTypesParams
-                              Numbers="42"
-                              Lines="lines" />);
+    var cut = Render(@<NonBlazorTypesParams
+                            Numbers="42"
+                            Lines="lines" />);
   }
 }
