--- a/docs/samples/tests/razor/ChildContentParams1Test.razor
+++ b/docs/samples/tests/razor/ChildContentParams1Test.razor
@@ -1,12 +1,12 @@
+@inherits TestContext
+
 @code
 {
   [Fact]
   public void Test()
   {
-    using var ctx = new TestContext();
-
-    var cut = ctx.Render(@<ChildContentParams>
-                            <h1>Hello World</h1>
-                          </ChildContentParams>);
+    var cut = Render(@<ChildContentParams>
+                          <h1>Hello World</h1>
+                      </ChildContentParams>);
   }
 }
