--- a/docs/samples/tests/razor/NestedComponentTest.razor
+++ b/docs/samples/tests/razor/NestedComponentTest.razor
@@ -1,12 +1,12 @@
+@inherits TestContext
+
 @code
 {
   [Fact]
   public void Test()
   {
-    using var ctx = new TestContext();
-
-    var cut = ctx.Render<HelloWorld>(@<Wrapper>
-                                        <HelloWorld />
-                                      </Wrapper>);
+    var cut = Render<HelloWorld>(@<Wrapper>
+                                    <HelloWorld />
+                                  </Wrapper>);
   }
 }
