--- a/docs/samples/tests/razor/RenderFragmentParams4Test.razor
+++ b/docs/samples/tests/razor/RenderFragmentParams4Test.razor
@@ -1,17 +1,17 @@
+@inherits TestContext
+
 @code
 {
   [Fact]
   public void Test()
   {
-    using var ctx = new TestContext();
-
-    var cut = ctx.Render(@<RenderFragmentParams>
-                            <Content>
-                              <h1>Below you will find a most interesting alert!</h1>
-                              <Alert Heading="Alert heading" Type=@AlertType.Warning>
-                                <p>Hello World</p>
-                              </Alert>
-                            </Content>
-                          </RenderFragmentParams>);
+    var cut = Render(@<RenderFragmentParams>
+                          <Content>
+                            <h1>Below you will find a most interesting alert!</h1>
+                            <Alert Heading="Alert heading" Type=@AlertType.Warning>
+                              <p>Hello World</p>
+                            </Alert>
+                          </Content>
+                        </RenderFragmentParams>);
   }
 }
