refactor: Use TestContext as base class

--- a/docs/samples/tests/razor/ChildContentParams3Test.razor
+++ b/docs/samples/tests/razor/ChildContentParams3Test.razor
@@ -1,14 +1,14 @@
+@inherits TestContext
+
 @code
 {
   [Fact]
   public void Test()
   {
-    using var ctx = new TestContext();
-
-    var cut = ctx.Render(@<ChildContentParams>
-                            <Alert Heading="Alert heading" Type=@AlertType.Warning>
-                              <p>Hello World</p>
-                            </Alert>
-                          </ChildContentParams>);
+    var cut = Render(@<ChildContentParams>
+                        <Alert Heading="Alert heading" Type=@AlertType.Warning>
+                          <p>Hello World</p>
+                        </Alert>
+                      </ChildContentParams>);
   }
 }
