--- a/docs/samples/tests/razor/RenderFragmentParams3Test.razor
+++ b/docs/samples/tests/razor/RenderFragmentParams3Test.razor
@@ -1,16 +1,16 @@
+@inherits TestContext
+
 @code
 {
   [Fact]
   public void Test()
   {
-    using var ctx = new TestContext();
-
-    var cut = ctx.Render(@<RenderFragmentParams>
-                            <Content>
-                              <Alert Heading="Alert heading" Type=@AlertType.Warning>
-                                <p>Hello World</p>
-                              </Alert>
-                            </Content>
-                          </RenderFragmentParams>);
+    var cut = Render(@<RenderFragmentParams>
+                        <Content>
+                          <Alert Heading="Alert heading" Type=@AlertType.Warning>
+                            <p>Hello World</p>
+                          </Alert>
+                        </Content>
+                      </RenderFragmentParams>);
   }
 }
