--- a/docs/samples/tests/nunit/HelloWorldRazorTest.razor
+++ b/docs/samples/tests/nunit/HelloWorldRazorTest.razor
@@ -7,7 +7,7 @@
     using var ctx = new Bunit.TestContext();
 
     // Act
-    var cut = ctx.Render(@<HelloWorld />);
+    var cut = Render(@<HelloWorld />);
 
     // Assert
     cut.MarkupMatches(@<h1>Hello world from Blazor</h1>);
