--- a/docs/samples/tests/razor/ClickMeTest.razor
+++ b/docs/samples/tests/razor/ClickMeTest.razor
@@ -1,11 +1,12 @@
+@inherits TestContext
+
 @code
 {
   [Fact]
   public void Test()
   {
     // Arrange
-    using var ctx = new TestContext();
-    var cut = ctx.Render(@<ClickMe />);
+    var cut = Render(@<ClickMe />);
     var buttonElement = cut.Find("button");
 
     // Act
