--- a/docs/samples/tests/xunit/HelloWorldExplicitContextRazorTest.razor
+++ b/docs/samples/tests/xunit/HelloWorldExplicitContextRazorTest.razor
@@ -1,10 +1,11 @@
-@inherits TestContext
-
 @code
 {
   [Fact]
   public void HelloWorldComponentRendersCorrectly()
   {
+    // Arrange
+    using var ctx = new TestContext();
+
     // Act
     var cut = Render(@<HelloWorld />);
 
