--- a/docs/samples/tests/xunit/HelloWorldRazorTest.razor
+++ b/docs/samples/tests/xunit/HelloWorldRazorTest.razor
@@ -1,13 +1,12 @@
+@inherits TestContext
+
 @code
 {
   [Fact]
   public void HelloWorldComponentRendersCorrectly()
   {
-    // Arrange
-    using var ctx = new TestContext();
-
     // Act
-    var cut = ctx.Render(@<HelloWorld />);
+    var cut = Render(@<HelloWorld />);
 
     // Assert
     cut.MarkupMatches(@<h1>Hello world from Blazor</h1>);
