docs: Use TestContext as base class for Passing parameters to components (#1034)
* refactor: Use TestContext as base class

* fixes to docs

* Indent size 2

* fix getting started and index

---------

Co-authored-by: Egil Hansen <egil@assimilated.dk>

--- a/docs/samples/tests/mstest/HelloWorldRazorTest.razor
+++ b/docs/samples/tests/mstest/HelloWorldRazorTest.razor
@@ -1,14 +1,12 @@
 @attribute [TestClass]
-@code 
+@inherits BunitTestContext
+@code
 {
   [TestMethod]
   public void HelloWorldComponentRendersCorrectly()
   {
-    // Arrange
-    using var ctx = new Bunit.TestContext();
-
     // Act
-    var cut = ctx.Render(@<HelloWorld/>);
+    var cut = Render(@<HelloWorld/>);
 
     // Assert
     cut.MarkupMatches(@<h1>Hello world from Blazor</h1>);
