--- a/docs/samples/tests/xunit/HelloWorldExplicitContextRazorTest.razor
+++ b/docs/samples/tests/xunit/HelloWorldExplicitContextRazorTest.razor
@@ -1,11 +1,13 @@
-@inherits BunitTestContext
 @code
 {
-  [Test]
+  [Fact]
   public void HelloWorldComponentRendersCorrectly()
   {
+    // Arrange
+    using var ctx = new TestContext();
+
     // Act
-    var cut = Render(@<HelloWorld />);
+    var cut = Render(@<HelloWorld/>);
 
     // Assert
     cut.MarkupMatches(@<h1>Hello world from Blazor</h1>);
