docs: Use TestContext as base class for Passing parameters to components (#1034)
* refactor: Use TestContext as base class

* fixes to docs

* Indent size 2

* fix getting started and index

---------

Co-authored-by: Egil Hansen <egil@assimilated.dk>

--- a/docs/samples/tests/razor/TemplateParams2Test.razor
+++ b/docs/samples/tests/razor/TemplateParams2Test.razor
@@ -1,16 +1,16 @@
+@inherits TestContext
+
 @code
 {
 #if NET6_0
   [Fact]
   public void Test()
   {
-    using var ctx = new TestContext();
-
-    var cut = ctx.Render(@<TemplateParams Items=@(new string[]{ "Foo", "Bar", "Baz" }) TItem="string">
-                            <Template>
-                              <Item Value=@context></Item>
-                            </Template>
-                          </TemplateParams>);
+    var cut = Render(@<TemplateParams Items=@(new string[]{ "Foo", "Bar", "Baz" }) TItem="string">
+                        <Template>
+                          <Item Value=@context></Item>
+                        </Template>
+                      </TemplateParams>);
   }
 #endif
 }
