doc: fixes to sample code to make it compile

--- a/docs/samples/tests/xunit/HelloWorldExplicitContextRazorTest.razor
+++ b/docs/samples/tests/xunit/HelloWorldExplicitContextRazorTest.razor
@@ -7,7 +7,7 @@
     using var ctx = new TestContext();
 
     // Act
-    var cut = Render(@<HelloWorld/>);
+    var cut = ctx.Render(@<HelloWorld/>);
 
     // Assert
     cut.MarkupMatches(@<h1>Hello world from Blazor</h1>);
