--- a/tests/bunit.testassets/SampleComponents/CustomElement.razor
+++ b/tests/bunit.testassets/SampleComponents/CustomElement.razor
@@ -1,4 +1,4 @@
 <div class="header">
 	<div>Custom Metadata Definitions</div>
-	<zui-button></zui-button>
+	<zui-button style="color:red"></zui-button>
 </div>
