Fixed merge issues

--- a/tests/bunit.tests/ComponentParameterCollectionBuilderTests.razor
+++ b/tests/bunit.tests/ComponentParameterCollectionBuilderTests.razor
@@ -1,4 +1,4 @@
-@inherits TestContext
+@inherits Bunit.TestContext
 @code {
     [Fact(DisplayName = "Bind method should behave like bind-directive")]
     public async Task Test400()
