--- a/tests/bunit.testassets/SampleComponents/DelayRemovedRenderFragment.razor
+++ b/tests/bunit.testassets/SampleComponents/DelayRemovedRenderFragment.razor
@@ -8,7 +8,7 @@
 		if (renderCountDown <= 0)
 			return;
 
-		await Task.Delay(1);
+		await Task.Yield();
 		renderCountDown--;
 		StateHasChanged();
 	}
