refactor: rename RenderComponent and SetParametersAndRender to Render

--- a/tests/bunit.tests/ComponentParameterCollectionBuilderTests.razor
+++ b/tests/bunit.tests/ComponentParameterCollectionBuilderTests.razor
@@ -7,7 +7,7 @@
         var initialValue = "Hello";
 
         // act
-        var bindMethod = RenderComponent<FullBind>(ps => ps
+        var bindMethod = Render<FullBind>(ps => ps
             .Bind(
                 p => p.Foo,
                 initialValue,
