feat: support for all element types that can have a wrapped label

--- a/tests/bunit.testassets/BlazorE2E/LabelQueryComponent.razor
+++ b/tests/bunit.testassets/BlazorE2E/LabelQueryComponent.razor
@@ -10,9 +10,12 @@
 <input id="ignored-input"/>
 
 @* Testing wrapped label *@
-<label>Wrapped Label
-	<input id="wrapped-label"/>
-</label>
+@foreach (var htmlElement in htmlElementsThatCanHaveALabel)
+{
+	<label>@htmlElement Wrapped Label
+		@((MarkupString) $"""<{htmlElement} id="{htmlElement}-wrapped-label"></{htmlElement}>""")
+	</label>
+}
 
 @* Testing no input *@
 <label>Label With Missing Input</label>
