feat: support for all element types that can have an aria-label

--- a/tests/bunit.testassets/BlazorE2E/LabelQueryComponent.razor
+++ b/tests/bunit.testassets/BlazorE2E/LabelQueryComponent.razor
@@ -21,7 +21,10 @@
 <label>Label With Missing Input</label>
 
 @* Testing aria-label *@
-<input id="input-with-aria-label" aria-label="Aria Label" />
+@foreach (var htmlElement in htmlElementsThatCanHaveALabel)
+{
+	@((MarkupString) $"""<{htmlElement} id="{htmlElement}-with-aria-label" aria-label="{htmlElement} Aria Label"></{htmlElement}>""")
+}
 
 
 @code {
